--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,15 @@ plugins {
 
 repositories {
     jcenter()
+    flatDir {
+        dirs 'libs'
+    }
 }
 
 dependencies {
     testImplementation 'junit:junit:4.13'
     implementation 'com.google.guava:guava:29.0-jre'
+    implementation name: 'GGT'
 }
 
 application {
